--- a/index.html
+++ b/index.html
@@ -2324,6 +2324,15 @@
         let roadview = null; // Roadview instance
         let roadviewClient = null; // RoadviewClient instance
 
+        // Premium Roadview POV Presets
+        const ROADVIEW_PRESETS = {
+            "스파|서울 노원구 동일로 1493": { pan: 335, tilt: 5, zoom: 0 },
+            "부일카서비스|부산 동구 자성로133번길 35": { pan: 50, tilt: 5, zoom: 0 },
+            "잠실매점|서울 송파구 올림픽로 269": { pan: 180, tilt: 0, zoom: 0 },
+            "세진전자통신|대구 서구 서대구로 156": { pan: 250, tilt: 10, zoom: 0 },
+            "목화휴게소|경남 사천시 사천대로 912": { pan: 90, tilt: 5, zoom: 0 }
+        };
+
 
         function handleFileSelect(event) {
             const file = event.target.files[0];
@@ -4174,6 +4183,16 @@
                 // Display roadview
                 roadview.setPanoId(panoId, position);
                 modal.style.display = 'block';
+
+                // Apply Premium POV if preset exists
+                const presetKey = `${shopName}|${address}`;
+                if (ROADVIEW_PRESETS[presetKey]) {
+                    const preset = ROADVIEW_PRESETS[presetKey];
+                    // small delay to ensure pano is loaded before setting viewpoint
+                    setTimeout(() => {
+                        roadview.setViewpoint(new kakao.maps.Viewpoint(preset.pan, preset.tilt, preset.zoom));
+                    }, 500);
+                }
 
                 // Show appropriate action button
                 copyBtn.style.display = 'none';
