--- a/index.html
+++ b/index.html
@@ -2330,7 +2330,11 @@
             "부일카서비스|부산 동구 자성로133번길 35": { pan: 50, tilt: 5, zoom: 0 },
             "잠실매점|서울 송파구 올림픽로 269": { pan: 180, tilt: 0, zoom: 0 },
             "세진전자통신|대구 서구 서대구로 156": { pan: 250, tilt: 10, zoom: 0 },
-            "목화휴게소|경남 사천시 사천대로 912": { pan: 90, tilt: 5, zoom: 0 }
+            "목화휴게소|경남 사천시 사천대로 912": { pan: 90, tilt: 5, zoom: 0 },
+            // 문경 왕대박복권방 (사용자 요청: 정면 시인성 중점)
+            "왕대박복권방|경북 문경시 중앙로 156": { pan: 60, tilt: 5, zoom: 0 },
+            "왕대박복권방|경북 문경시 중앙로 15": { pan: 180, tilt: 5, zoom: 0 },
+            "왕대박복권방|경북 문경시 모전동 81-89": { pan: 180, tilt: 5, zoom: 0 }
         };
 
 
