--- a/index.html
+++ b/index.html
@@ -2324,18 +2324,16 @@
         let roadview = null; // Roadview instance
         let roadviewClient = null; // RoadviewClient instance
 
-        // Premium Roadview POV Presets
-        const ROADVIEW_PRESETS = {
-            "스파|서울 노원구 동일로 1493": { pan: 335, tilt: 5, zoom: 0 },
-            "부일카서비스|부산 동구 자성로133번길 35": { pan: 50, tilt: 5, zoom: 0 },
-            "잠실매점|서울 송파구 올림픽로 269": { pan: 180, tilt: 0, zoom: 0 },
-            "세진전자통신|대구 서구 서대구로 156": { pan: 250, tilt: 10, zoom: 0 },
-            "목화휴게소|경남 사천시 사천대로 912": { pan: 90, tilt: 5, zoom: 0 },
-            // 문경 왕대박복권방 (사용자 요청: 정면 시인성 중점)
-            "왕대박복권방|경북 문경시 중앙로 156": { pan: 60, tilt: 5, zoom: 0 },
-            "왕대박복권방|경북 문경시 중앙로 15": { pan: 180, tilt: 5, zoom: 0 },
-            "왕대박복권방|경북 문경시 모전동 81-89": { pan: 180, tilt: 5, zoom: 0 }
-        };
+        // Premium Roadview POV Presets (Optimized for better matching)
+        const ROADVIEW_PRESETS = [
+            { name: "스파", addr: "동일로 1493", pov: { pan: 335, tilt: 5, zoom: 0 } },
+            { name: "부일카서비스", addr: "자성로133번길 35", pov: { pan: 50, tilt: 5, zoom: 0 } },
+            { name: "잠실매점", addr: "올림픽로 269", pov: { pan: 180, tilt: 0, zoom: 0 } },
+            { name: "목화휴게소", addr: "사천대로 912", pov: { pan: 90, tilt: 5, zoom: 0 } },
+            // 문경 왕대박복권방 (사용자 요청: 중앙로 15 1층)
+            { name: "왕대박복권방", addr: "중앙로 15 1층", pov: { pan: 180, tilt: 5, zoom: 0 } },
+            { name: "왕대박복권방", addr: "모전동 81-89", pov: { pan: 180, tilt: 5, zoom: 0 } }
+        ];
 
 
         function handleFileSelect(event) {
@@ -4188,14 +4186,25 @@
                 roadview.setPanoId(panoId, position);
                 modal.style.display = 'block';
 
-                // Apply Premium POV if preset exists
-                const presetKey = `${shopName}|${address}`;
-                if (ROADVIEW_PRESETS[presetKey]) {
-                    const preset = ROADVIEW_PRESETS[presetKey];
-                    // small delay to ensure pano is loaded before setting viewpoint
+                // Apply Premium POV if preset exists (with flexible matching)
+                const currentShopName = (shopName || "").trim();
+                const currentAddress = (address || "").trim();
+
+                console.log("Roadview Open - Shop:", currentShopName, "Addr:", currentAddress);
+
+                const preset = ROADVIEW_PRESETS.find(p =>
+                    currentShopName.includes(p.name) && currentAddress.includes(p.addr)
+                );
+
+                if (preset) {
+                    console.log("Premium POV Matched:", preset);
+                    // 1.2s delay to ensure roadview is fully interactive and stable
                     setTimeout(() => {
-                        roadview.setViewpoint(new kakao.maps.Viewpoint(preset.pan, preset.tilt, preset.zoom));
-                    }, 500);
+                        roadview.setViewpoint(new kakao.maps.Viewpoint(preset.pov.pan, preset.pov.tilt, preset.pov.zoom));
+                        console.log("Viewpoint success (pan/tilt):", preset.pov.pan, preset.pov.tilt);
+                    }, 1200);
+                } else {
+                    console.warn("No POV preset found for:", currentShopName, currentAddress);
                 }
 
                 // Show appropriate action button
@@ -4243,10 +4252,9 @@
 
         function openKakaoMap(lat, lng, shopName, address) {
             // Open Kakao Map with address search + "복권" keyword
-            // This helps users find the exact lottery shop location more easily
-            // Using search instead of coordinates shows nearby lottery shops
+            // Updated to use the ?q= format as requested by the user
             const searchQuery = `${address} 복권`;
-            const url = `https://map.kakao.com/link/search/${encodeURIComponent(searchQuery)}`;
+            const url = `https://map.kakao.com/?q=${encodeURIComponent(searchQuery)}`;
             window.open(url, '_blank');
         }
 
