Update meta tags for custom domain

--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
     <!-- Open Graph (KakaoTalk, Facebook, etc.) -->
     <meta property="og:title" content="🎰 KINOV 로또 명당 지도">
     <meta property="og:description" content="역대 1등 당첨 판매점을 한눈에! 당신의 행운을 찾아보세요.">
-    <meta property="og:image" content="https://www.k-inov.co.kr/assets/img/lotto_share_thumb.png">
-    <!-- Update with actual image URL if available, or use a placeholder -->
-    <meta property="og:url" content="https://integral81.github.io/lotto_kakaomap/">
+    <meta property="og:image" content="https://k-inov.com/lottomap/kinovmall.png">
+    <meta property="og:url" content="https://k-inov.com/lottomap/">
     <meta property="og:type" content="website">
 
     <!-- Favicon (Using Emoji for now if no file exists) -->
