--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html>
 
 <head>
+    <script>
+        // GitHub Pages subdirectory trailing slash fix (Ensures relative JSON fetches work)
+        (function () {
+            var path = window.location.pathname;
+            if (path.length > 1 && !path.endsWith('/') && !path.split('/').pop().includes('.')) {
+                window.location.replace(window.location.pathname + '/' + window.location.search + window.location.hash);
+            }
+        })();
+    </script>
     <meta charset="utf-8">
     <title>KINOV 로또 명당 지도</title>
     <!-- Library for QR Code Scanning -->
@@ -2604,9 +2613,23 @@
             const countEl = document.getElementById('totalDataCount');
             console.log('Loading data...');
 
+            // Robust path handling for repo subdirectories
+            // If the URL is missing a trailing slash (e.g. /lottomap), the browser fetches from root.
+            // We use ./ to force relative to current "file" or directory.
+            const urlPrefix = (window.location.pathname.endsWith('/') || window.location.pathname.includes('.')) ? './' : './lottomap/';
+
+            // However, a much more robust way since we know the structure:
+            const currentDir = window.location.href.substring(0, window.location.href.lastIndexOf('/') + 1);
+
             Promise.all([
-                fetch('lotto_data.json?v=' + Date.now()).then(res => res.json()),
-                fetch('lotto_history.json?v=' + Date.now()).then(res => res.json())
+                fetch(currentDir + 'lotto_data.json?v=' + Date.now()).then(res => {
+                    if (!res.ok) throw new Error('Data file not found: ' + res.status);
+                    return res.json();
+                }),
+                fetch(currentDir + 'lotto_history.json?v=' + Date.now()).then(res => {
+                    if (!res.ok) throw new Error('History file not found: ' + res.status);
+                    return res.json();
+                })
             ])
                 .then(([lottoData, historyData]) => {
                     window.lottoHistory = historyData; // Global variable
