--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
         // GitHub Pages subdirectory trailing slash fix (Ensures relative JSON fetches work)
         (function () {
             var path = window.location.pathname;
+            // Redirect /lottomap to /lottomap/ (only if no file extension is present)
             if (path.length > 1 && !path.endsWith('/') && !path.split('/').pop().includes('.')) {
-                window.location.replace(window.location.pathname + '/' + window.location.search + window.location.hash);
+                var newUrl = window.location.protocol + '//' + window.location.host + path + '/' + window.location.search + window.location.hash;
+                window.location.replace(newUrl);
             }
         })();
     </script>
@@ -2609,38 +2611,52 @@
             loadData();
         };
 
-        function loadData() {
+        async function loadData() {
             const countEl = document.getElementById('totalDataCount');
             console.log('Loading data...');
 
-            // Robust path handling for repo subdirectories
-            // If the URL is missing a trailing slash (e.g. /lottomap), the browser fetches from root.
-            // We use ./ to force relative to current "file" or directory.
-            const urlPrefix = (window.location.pathname.endsWith('/') || window.location.pathname.includes('.')) ? './' : './lottomap/';
+            const filenames = ['lotto_data.json', 'lotto_history.json'];
+            const cacheBuster = '?v=' + Date.now();
 
-            // However, a much more robust way since we know the structure:
-            const currentDir = window.location.href.substring(0, window.location.href.lastIndexOf('/') + 1);
+            // Try different path patterns:
+            const baseDir = window.location.href.substring(0, window.location.href.lastIndexOf('/') + 1);
 
-            Promise.all([
-                fetch(currentDir + 'lotto_data.json?v=' + Date.now()).then(res => {
-                    if (!res.ok) throw new Error('Data file not found: ' + res.status);
-                    return res.json();
-                }),
-                fetch(currentDir + 'lotto_history.json?v=' + Date.now()).then(res => {
-                    if (!res.ok) throw new Error('History file not found: ' + res.status);
-                    return res.json();
-                })
-            ])
-                .then(([lottoData, historyData]) => {
-                    window.lottoHistory = historyData; // Global variable
-                    processLoadedData(lottoData);
-                })
-                .catch(err => {
-                    console.error('Data load failed:', err);
-                    countEl.innerHTML = `<span style="color:red; font-size:11px; cursor:help;" title="${err.message}">로드 실패 (${err.name})</span>`;
-                    document.getElementById('manualLoader').style.display = 'block';
-                    alert('데이터 파일 로드 중 에러가 발생했습니다.\n\n' + err.message);
-                });
+            async function fetchWithRetry(filename) {
+                const paths = [
+                    filename + cacheBuster,
+                    './' + filename + cacheBuster,
+                    baseDir + filename + cacheBuster,
+                    '/lottomap/' + filename + cacheBuster
+                ];
+
+                for (let path of paths) {
+                    try {
+                        console.log('Trying fetch:', path);
+                        const res = await fetch(path);
+                        if (res.ok) {
+                            return await res.json();
+                        }
+                    } catch (e) {
+                        console.warn('Path failed:', path, e);
+                    }
+                }
+                throw new Error(filename + ' 를 찾을 수 없습니다. 경로를 확인해 주세요.');
+            }
+
+            try {
+                const [lottoData, historyData] = await Promise.all([
+                    fetchWithRetry('lotto_data.json'),
+                    fetchWithRetry('lotto_history.json')
+                ]);
+
+                window.lottoHistory = historyData;
+                processLoadedData(lottoData);
+            } catch (err) {
+                console.error('Data load failed:', err);
+                countEl.innerHTML = `<span style="color:red; font-size:11px; cursor:help;" title="${err.message}">로드 실패</span>`;
+                document.getElementById('manualLoader').style.display = 'block';
+                alert('데이터 파일 로드 중 에러가 발생했습니다.\n\n' + err.message);
+            }
         }
 
         // --- Advanced Prediction Algorithm ---
