feat: Achieve 100% win count parity and 98.4% coordinate coverage

--- a/index.html
+++ b/index.html
@@ -2489,7 +2489,121 @@
             { name: "GS25(양산문성)", addr: "경남 양산시 평산동 31-5", panoId: 1204592950, pov: { pan: 269.6, tilt: 1.0, zoom: 1 } },
             { name: "우리들공업탑점", addr: "울산 남구 신정동 1233-3", isClosed: true, customMessage: "과거 '영화유통'으로 불리며 1등 당첨자를 10회 이상 배출한 유명 명당이었으나, 현재는 점주 별세 및 자격 문제로 인해 폐업 상태입니다." },
             { name: "메트로센터점", addr: "대구 중구 달구벌대로 지하 2100", customMessage: "이 매장은 반월당역 지하상가(C412호) 중심부에 위치하고 있습니다.\n로드뷰는 지상 반월당역 14번 출구 인근을 보여드립니다。" },
-            { name: "행복한사람들(흥부네)", addr: "경기 광주시 초월읍 산이리 13-1", imageUrl: "assets/img/happypeople.png", customMessage: "이 점포는 도로 인접성 문제로 로드뷰 제공이 어려워 현장 사진으로 대체합니다。" }
+            { name: "행복한사람들(흥부네)", addr: "경기 광주시 초월읍 산이리 13-1", imageUrl: "assets/img/happypeople.png", customMessage: "이 점포는 도로 인접성 문제로 로드뷰 제공이 어려워 현장 사진으로 대체합니다。" },
+            { name: "인터넷 복권판매사이트", addr: "서울특별시 서초구 남부순환로", customLink: "https://www.dhlottery.co.kr/userGuide", customMessage: "동 판매점은 온라인 구매가능한 동행복권 싸이트로 연결드립니다." },
+            { name: "25시슈퍼", addr: "함송로14번길 13-17", panoId: 1176030807, pov: { pan: 310.46, tilt: 0.85, zoom: -1 } },
+            { name: "복권판매점", addr: "동탄중심상가2길 37 1층으", panoId: 1198012866, pov: { pan: 212.35, tilt: -1.20, zoom: -2 } },
+            { name: "NBA(엔비에이)", addr: "운서동 2803-1 128호", panoId: 1199042496, pov: { pan: 185.43, tilt: -3.07, zoom: 2 } },
+            { name: "헬로마트", addr: "서울 도봉구 도봉2동 89-148", panoId: 1197897753, pov: { pan: 137.1, tilt: 6.5, zoom: 2 } },
+            { name: "북문복권방", addr: "정조로 927-1", panoId: 1199757912, pov: { pan: 147.1, tilt: 4.8, zoom: 2 } },
+            { name: "로또", addr: "서울 중구 신당동", panoId: 1198788751, pov: { pan: 276.93, tilt: 5.46, zoom: -3 } },
+            { name: "데이앤나잇", addr: "서울 성북구 종암동", panoId: 1198236406, pov: { pan: 59.17, tilt: 4.90, zoom: -1 } },
+            { name: "초월대박복권방", addr: "경기 광주시 초월읍", panoId: 1203793226, pov: { pan: 46.93, tilt: 0.32, zoom: -1 } },
+            { name: "25시슈퍼", addr: "경남 창원시 마산회원구", panoId: 1204402491, pov: { pan: 7.70, tilt: -1.92, zoom: -3 } },
+            { name: "25시슈퍼", addr: "경기 시흥시 정왕동", panoId: 1176030803, pov: { pan: 307.08, tilt: 2.52, zoom: 0 } },
+            { name: "CU(대림중앙점)", addr: "서울 영등포구 대림3동", panoId: 1198470102, pov: { pan: 287.22, tilt: 4.36, zoom: 1 } },
+            { name: "GS25(두정메트로점)", addr: "충남 천안시 서북구", panoId: 1195535897, pov: { pan: 4.40, tilt: -3.16, zoom: -3 } },
+            { name: "GS25(양산혜인점)", addr: "경남 양산시 평산동", panoId: 1204592950, pov: { pan: 284.55, tilt: -2.89, zoom: -3 } },
+            { name: "GS25(종로낙원)", addr: "서울 종로구 낙원동", panoId: 1198436368, pov: { pan: 247.55, tilt: 6.34, zoom: -3 } },
+            { name: "GS25(중촌현대)", addr: "대전 중구 중촌동", panoId: 1201489199, pov: { pan: 314.11, tilt: -0.33, zoom: -3 } },
+            { name: "G마트", addr: "서울 영등포구 디지털로", panoId: 1198746873, pov: { pan: 272.22, tilt: 7.62, zoom: 0 } },
+            { name: "HX복권방", addr: "경기 이천시 부발읍", panoId: 1175067769, pov: { pan: 81.37, tilt: -0.54, zoom: 0 } },
+            { name: "NBA(엔비에이)", addr: "인천 중구 신도시남로142번길", panoId: 1199042496, pov: { pan: 163.15, tilt: -3.80, zoom: 1 } },
+            { name: "NG24", addr: "경북 칠곡군 북중리3길", panoId: 1166761988, pov: { pan: 317.63, tilt: 0.25, zoom: -3 } },
+            { name: "가판14호", addr: "서울 중구 퇴계로", panoId: 1198729502, pov: { pan: 325.62, tilt: 2.13, zoom: -3 } },
+            { name: "금강종합공구", addr: "경기 김포시 대곶면", panoId: 1203805177, pov: { pan: 152.44, tilt: 6.16, zoom: 1 } },
+            { name: "금곡로", addr: "경기 수원시 권선구", panoId: 1199869934, pov: { pan: 223.14, tilt: -10.18, zoom: 1 } },
+            { name: "김포로또", addr: "경기 김포시 사우동", panoId: 1203803036, pov: { pan: 30.03, tilt: 0.32, zoom: 1 } },
+            { name: "나눔이매로또", addr: "경기 성남시 분당구", panoId: 1199105927, pov: { pan: 352.81, tilt: 3.21, zoom: -2 } },
+            { name: "노다지복권", addr: "강원 횡성군 문정로", panoId: 1197181543, pov: { pan: 217.60, tilt: 1.34, zoom: -1 } },
+            { name: "다모아복권", addr: "서울 구로구 오류동", panoId: 1198581650, pov: { pan: 54.87, tilt: 2.77, zoom: -3 } },
+            { name: "다모아복권방", addr: "서울 구로구 오류동", panoId: 1198548447, pov: { pan: 256.07, tilt: 0.72, zoom: -3 } },
+            { name: "대박스타", addr: "인천 미추홀구 경인로", panoId: 1199708556, pov: { pan: 180.27, tilt: 0.72, zoom: -1 } },
+            { name: "대박찬스", addr: "충북 청주시 흥덕구", panoId: 1170563610, pov: { pan: 247.36, tilt: -0.69, zoom: -1 } },
+            { name: "대성기획", addr: "경기 용인시 기흥구 구성로", panoId: 1199504553, pov: { pan: 11.62, tilt: 0.18, zoom: -3 } },
+            { name: "대원슈퍼마켓", addr: "부산 수영구 광안2동", panoId: 1202817759, pov: { pan: 102.41, tilt: 4.05, zoom: -3 } },
+            { name: "돈벼락맞는곳", addr: "부산 기장군 읍내로", panoId: 1162339595, pov: { pan: 354.91, tilt: -2.05, zoom: -3 } },
+            { name: "동원복권", addr: "경남 양산시 북정동", panoId: 1204826032, pov: { pan: 118.64, tilt: 0.81, zoom: -3 } },
+            { name: "드림", addr: "경기 수원시 권선구 세류동", panoId: 1200109952, pov: { pan: 296.4, tilt: 8.3, zoom: 0 } },
+            { name: "드림마트", addr: "인천 서구 검단로", panoId: 1198835640, pov: { pan: 148.68, tilt: 2.64, zoom: -3 } },
+            { name: "로또", addr: "경기 포천시 죽엽산로196번길", panoId: 1175927131, pov: { pan: 316.68, tilt: -1.36, zoom: -3 } },
+            { name: "로또(파발마점)", addr: "경기 시흥시 정왕동", panoId: 1175870702, pov: { pan: 114.75, tilt: -1.36, zoom: -3 } },
+            { name: "로또대박", addr: "세종 장척로 571", panoId: 1200779340, pov: { pan: 21.15, tilt: 1.86, zoom: -3 } },
+            { name: "로또대박", addr: "경기 부천시 석천로177번길", panoId: 1203625174, pov: { pan: 190.23, tilt: -5.06, zoom: -3 } },
+            { name: "로또명당해미점", addr: "충남 서산시 해미면", panoId: 1177266091, pov: { pan: 261.83, tilt: 4.10, zoom: -3 } },
+            { name: "로또복권방", addr: "충남 당진시 당진읍", panoId: 1174017431, pov: { pan: 349.10, tilt: 2.80, zoom: -3 } },
+            { name: "로또복권하대점", addr: "경남 진주시 하대동", panoId: 1193106643, pov: { pan: 84.77, tilt: 1.40, zoom: -3 } },
+            { name: "로또천국", addr: "충북 충주시 칠금동", panoId: 1164453210, pov: { pan: 296.39, tilt: -0.41, zoom: 0 } },
+            { name: "로터리편의마트", addr: "경북 포항시 북구", panoId: 1187245253, pov: { pan: 37.52, tilt: 4.06, zoom: -3 } },
+            { name: "마두5번출구가판로또", addr: "경기 고양시 일산동구", panoId: 1203614425, pov: { pan: 72.37, tilt: 0.55, zoom: 1 } },
+            { name: "명당", addr: "경남 진주시 동부로", panoId: 1193074745, pov: { pan: 108.48, tilt: -6.44, zoom: -1 } },
+            { name: "묵동식품", addr: "서울 중랑구 동일로", panoId: 1198448343, pov: { pan: 224.74, tilt: 2.27, zoom: 1 } },
+            { name: "버스표가판점", addr: "경기 안양시 동안구", panoId: 1203300471, pov: { pan: 234.49, tilt: -8.46, zoom: -1 } },
+            { name: "베스트올수성점", addr: "전북 정읍시 수성동", panoId: 1183495363, pov: { pan: 211.63, tilt: 15.04, zoom: -3 } },
+            { name: "복권나라", addr: "서울 관악구 은천로", panoId: 1198290120, pov: { pan: 181.52, tilt: 0.58, zoom: -3 } },
+            { name: "복권마을", addr: "서울 구로구 구로동로", panoId: 1198161434, pov: { pan: 75.40, tilt: 2.67, zoom: -3 } },
+            { name: "복권방", addr: "부산 사하구 장림동", panoId: 1202461052, pov: { pan: 33.37, tilt: -4.08, zoom: -3 } },
+            { name: "복권세상", addr: "전남 목포시 청호로", panoId: 1192169730, pov: { pan: 228.46, tilt: 5.41, zoom: -2 } },
+            { name: "복권세상", addr: "경기 여주시 우암로", panoId: 1174843105, pov: { pan: 89.62, tilt: 2.70, zoom: -2 } },
+            { name: "복권파는집", addr: "경남 창원시 마산회원구", panoId: 1204721909, pov: { pan: 319.58, tilt: -6.57, zoom: -2 } },
+            { name: "복돼지복권방", addr: "경기 화성시 3.1만세로", panoId: 1196772296, pov: { pan: 338.50, tilt: 1.21, zoom: -2 } },
+            { name: "본스튜디오", addr: "제주 제주시 하귀로", panoId: 1181077460, pov: { pan: 338.03, tilt: 0.61, zoom: -2 } },
+            { name: "부자복권방", addr: "전북 군산시 대명동", panoId: 1172510553, pov: { pan: 57.92, tilt: -0.16, zoom: -2 } },
+            { name: "삼삼마트", addr: "경남 진주시 봉곡동", panoId: 1192627365, pov: { pan: 159.63, tilt: 3.61, zoom: -3 } },
+            { name: "서재강변로또", addr: "대구 달성군 다사읍", panoId: 1200883303, pov: { pan: 116.21, tilt: -2.75, zoom: -3 } },
+            { name: "서정천하명당", addr: "경기 평택시 서정동", panoId: 1198410230, pov: { pan: 79.3, tilt: 5.2, zoom: 0 } },
+            { name: "성심상회", addr: "경북 포항시 북구 불종로", panoId: 1186982434, pov: { pan: 198.8, tilt: -6.1, zoom: 0 } },
+            { name: "성호복권방", addr: "대전 대덕구 신일동로", panoId: 1201128527, pov: { pan: 19.99, tilt: 4.58, zoom: -3 } },
+            { name: "세븐일레븐 홍익점", addr: "경기 안성시 종합운동장로", panoId: 1176123645, pov: { pan: 325.1, tilt: 0.9, zoom: -1 } },
+            { name: "세종로또방", addr: "세종 용포로 32", panoId: 1200677275, pov: { pan: 81.66, tilt: 5.68, zoom: -3 } },
+            { name: "수퍼복권대박", addr: "인천 연수구 용담로", panoId: 1200644068, pov: { pan: 201.2, tilt: -4.2, zoom: 0 } },
+            { name: "신불당로또", addr: "충남 천안시 서북구", panoId: 1195219571, pov: { pan: 267.81, tilt: -0.01, zoom: 0 } },
+            { name: "신영슈퍼", addr: "서울 강남구 광평로51길", panoId: 1198825857, pov: { pan: 11.28, tilt: -0.54, zoom: 0 } },
+            { name: "씨스페이스 어방점", addr: "경남 김해시 인제로170번길", panoId: 1195018029, pov: { pan: 78.25, tilt: 1.62, zoom: -3 } },
+            { name: "씨유 대전반석역점", addr: "대전 유성구 반석로", panoId: 1200979469, pov: { pan: 21.38, tilt: 1.42, zoom: 0 } },
+            { name: "아이러브마트복권방", addr: "울산 중구 유곡로", panoId: 1202037956, pov: { pan: 166.5, tilt: 1.3, zoom: -1 } },
+            { name: "알리바이", addr: "광주 광산구 신가동", panoId: 1199874247, pov: { pan: 46.58, tilt: -6.28, zoom: -3 } },
+            { name: "오늘의로또", addr: "경기 오산시 권리사로", panoId: 1198544061, pov: { pan: 224.2, tilt: 3.3, zoom: 0 } },
+            { name: "용꿈돼지꿈복권방", addr: "경기 시흥시 하중로", panoId: 1175674861, pov: { pan: 75.71, tilt: -6.45, zoom: 1 } },
+            { name: "우일", addr: "서울 송파구 마천2동", panoId: 1198540869, pov: { pan: 359.88, tilt: 1.39, zoom: 2 } },
+            { name: "원당역복권방", addr: "경기 고양시 덕양구", panoId: 1203875563, pov: { pan: 39.96, tilt: -0.78, zoom: -1 } },
+            { name: "인생대역전", addr: "인천 계양구 임학동", panoId: 1198902079, pov: { pan: 301.04, tilt: 0.71, zoom: -1 } },
+            { name: "자수정슈퍼", addr: "전북 전주시 완산구", panoId: 1172061409, pov: { pan: 143.41, tilt: -2.21, zoom: -1 } },
+            { name: "장미슈퍼", addr: "충남 부여군 부여읍", panoId: 1178842351, pov: { pan: 265.2, tilt: 0.1, zoom: -1 } },
+            { name: "제이복권방", addr: "서울 종로구 종로5가", panoId: 1197815068, pov: { pan: 358.97, tilt: -5.13, zoom: -3 } },
+            { name: "종로3가1호선역2번출구가로판매점82호", addr: "서울 종로구 종로3가", panoId: 1198163888, pov: { pan: 238.8, tilt: 0.6, zoom: -1 } },
+            { name: "종합복권방", addr: "전남 해남군 해남읍", panoId: 1189205617, pov: { pan: 162.87, tilt: -3.96, zoom: -3 } },
+            { name: "주엽역 로또판매점", addr: "경기 고양시 일산서구", panoId: 1203613079, pov: { pan: 227.60, tilt: -1.98, zoom: -1 } },
+            { name: "주택복권방", addr: "강원 원주시 우산초교길", panoId: 1195999144, pov: { pan: 209.61, tilt: 1.36, zoom: -3 } },
+            { name: "주택복권방", addr: "경기 용인시 수지구", panoId: 1199750334, pov: { pan: 142.54, tilt: 0.54, zoom: -1 } },
+            { name: "진우복권", addr: "부산 연제구 월드컵대로", panoId: 1202681433, pov: { pan: 140.83, tilt: -14.59, zoom: -3 } },
+            { name: "진우행운복권방", addr: "경기 광주시 도척로", panoId: 1203185125, pov: { pan: 269.1, tilt: 1.7, zoom: 0 } },
+            { name: "천하명당", addr: "경기 평택시 탄현로", panoId: 1198300869, pov: { pan: 95.49, tilt: 2.73, zoom: 0 } },
+            { name: "천하명당복권", addr: "대구 북구 칠곡중앙대로", panoId: 1201202732, pov: { pan: 280.77, tilt: 8.47, zoom: 0 } },
+            { name: "천하명당복권", addr: "대구 북구 관음동", panoId: 1201464296, pov: { pan: 208.77, tilt: 11.18, zoom: -3 } },
+            { name: "천하명당복권방", addr: "경기 수원시 팔달구", panoId: 1200112414, pov: { pan: 58.24, tilt: 4.22, zoom: 1 } },
+            { name: "천하명당복권방", addr: "경남 거제시 옥포1동", panoId: 1204368034, pov: { pan: 81.98, tilt: 0.07, zoom: 1 } },
+            { name: "천하명당복권방", addr: "충남 홍성군 홍성읍", panoId: 1161022469, pov: { pan: 191.39, tilt: 10.32, zoom: 1 } },
+            { name: "탑로또", addr: "경남 거제시 상동동(상문동)", panoId: 1204694341, pov: { pan: 210.88, tilt: -2.11, zoom: 2 } },
+            { name: "팡팡복권방", addr: "충북 진천군 광혜원면", panoId: 1185181826, pov: { pan: 116.28, tilt: 6.65, zoom: -1 } },
+            { name: "패밀리복권방", addr: "경기 남양주시 늘을1로16번길", panoId: 1203140248, pov: { pan: 263.69, tilt: -2.78, zoom: -1 } },
+            { name: "편의점사랑", addr: "서울 강서구 곰달래로25길", panoId: 1198688107, pov: { pan: 208.17, tilt: 2.01, zoom: 1 } },
+            { name: "프로토베팅샵", addr: "부산 중구 국제시장2길", panoId: 1132643336, pov: { pan: 236.09, tilt: 3.43, zoom: -2 } },
+            { name: "하늘과바다", addr: "인천 부평구 부개동", panoId: 1199223112, pov: { pan: 0.36, tilt: -0.01, zoom: -2 } },
+            { name: "하당복권방", addr: "전남 목포시 옥암동", panoId: 1192538904, pov: { pan: 41.70, tilt: -0.67, zoom: -3 } },
+            { name: "하영", addr: "인천 서구 청라에메랄드로", panoId: 1199762293, pov: { pan: 255.29, tilt: 1.55, zoom: -3 } },
+            { name: "해수로또", addr: "충북 청주시 상당구", panoId: 1168821889, pov: { pan: 78.39, tilt: 0.85, zoom: -3 } },
+            { name: "행복미니슈퍼", addr: "경기 부천시 원미구", panoId: 1203727264, pov: { pan: 36.10, tilt: 2.95, zoom: 2 } },
+            { name: "행복복권방", addr: "경남 창원시 의창구", panoId: 1205303190, pov: { pan: 323.00, tilt: 4.49, zoom: 2 } },
+            { name: "행운방", addr: "경기 용인시 기흥구 보정동", panoId: 1194380962, pov: { pan: 99.2, tilt: 3.0, zoom: -1 } },
+            { name: "행운복권", addr: "충북 제천시 의림동", panoId: 1184953796, pov: { pan: 354.68, tilt: -2.45, zoom: -3 } },
+            { name: "행운복권", addr: "경기 군포시 대야1로", panoId: 1103004351, pov: { pan: 25.8, tilt: 1.5, zoom: 0 } },
+            { name: "행운복권방", addr: "부산 중구 남포동5가", panoId: 1202742263, pov: { pan: 155.48, tilt: 4.28, zoom: -3 } },
+            { name: "행운복권방", addr: "경기 의정부시 용현동", panoId: 1174558837, pov: { pan: 250.50, tilt: -2.32, zoom: -3 } },
+            { name: "행운복권방", addr: "강원 인제군 북면", panoId: 1196203773, pov: { pan: 200.81, tilt: -2.33, zoom: -3 } },
+            { name: "행운을주는사람들", addr: "충북 충주시 연수동", panoId: 1165060593, pov: { pan: 241.75, tilt: 4.97, zoom: -1 } },
+            { name: "형제상회", addr: "대전 서구 용문동", panoId: 1201229162, pov: { pan: 241.38, tilt: 0.93, zoom: -1 } },
+            { name: "현대사", addr: "경기 성남시 분당구 구미동 144-1 102호", panoId: 1199011246, pov: { pan: 359.56, tilt: 1.25, zoom: -3 } }
         ];
 
 
@@ -4430,6 +4544,12 @@
 
             if (preset && preset.isClosed) {
                 alert('현재 폐업점으로 로드뷰 제공이 불가능합니다');
+                return;
+            }
+
+            if (preset && preset.customLink) {
+                alert(preset.customMessage);
+                window.open(preset.customLink, '_blank');
                 return;
             }
 
