Admin: Register POV for Sejin Electronics & Telecom

--- a/index.html
+++ b/index.html
@@ -2425,7 +2425,7 @@
             { name: "일등복권편의점", addr: "대구 달서구 대명천로 220", panoId: 1201526676, pov: { pan: 350.40, tilt: 1.57, zoom: -1 } },
             { name: "하늘로또", addr: "경기 여주시 세종로475번길", panoId: 1175070156, pov: { pan: 49.17, tilt: 3.23, zoom: 2 } },
             { name: "빅세일복권방", addr: "부산 부산진구 서면문화로", panoId: 1202698289, pov: { pan: 104.61, tilt: -2.96, zoom: 3 } },
-            { name: "세진전자통신", addr: "대구 서구 서대구로", panoId: 1201585664, pov: { pan: 94.22, tilt: -0.93, zoom: -2 } },
+            { name: "세진전자통신", addr: "대구 서구 평리동 1094-4", panoId: 1201585664, pov: { pan: 83.32, tilt: 2.46, zoom: -3 } },
             { name: "복권나라", addr: "서울 관악구 남부순환로 1739-9", panoId: 1198285612, pov: { pan: 181.9, tilt: 8.3, zoom: 2 } },
             { name: "다니엘사", addr: "경기 안산시 단원구 원선1로 38 101호", panoId: 1204134596, pov: { pan: 356.2, tilt: -3.0, zoom: 4 } },
             { name: "이마트24 순천산단점", addr: "전남 순천시 산단1길 6", panoId: 1173643437, pov: { pan: 257.9, tilt: 3.2, zoom: 3 } },
