UI: Register Mokhwa POV and expand Bokkwon Nara admin list

--- a/index.html
+++ b/index.html
@@ -2412,6 +2412,7 @@
             { name: "가판점(신문)", addr: "서울 영등포구 당산동6가 331-1", panoId: 1198369749, pov: { pan: 25.60, tilt: 3.30, zoom: 0 } },
             { name: "묵동식품", addr: "서울 중랑구 묵동 238-11", panoId: 1198447963, pov: { pan: 268.85, tilt: 2.27, zoom: 3 } },
             { name: "목화휴게소", addr: "경남 사천시 용현면", panoId: 1188432049, pov: { pan: 103.75, tilt: 8.02, zoom: 1 } },
+            { name: "목화휴게소", addr: "경남 사천시 사천대로 912", panoId: 1188272977, pov: { pan: 34.24, tilt: 0.74, zoom: 0 } },
             { name: "복권백화점", addr: "경기 파주시 평화로", panoId: 1202862935, pov: { pan: 48.22, tilt: 2.81, zoom: 1 } },
             { name: "복권백화점(대백.한라앞)", addr: "대구 달서구 이곡동", panoId: 1201505680, pov: { pan: 341.21, tilt: 4.46, zoom: 0 } },
             { name: "영화유통(1등복권방)", addr: "울산 남구 신정로", panoId: 1202168610, pov: { pan: 262.28, tilt: 6.84, zoom: -3 } },
