--- a/index.html
+++ b/index.html
@@ -2458,6 +2458,7 @@
             { name: "세계로생활가전", addr: "서울 동작구 보라매로", panoId: 1197780011, pov: { pan: 92.74, tilt: 5.30, zoom: -2 } },
             { name: "노다지복권방", addr: "인천 미추홀구 한나루로", panoId: 1199931642, pov: { pan: 128.28, tilt: 0.08, zoom: -3 } },
             { name: "대박천하마트", addr: "인천 부평구 굴포로", panoId: 1198907645, pov: { pan: 105.07, tilt: 4.60, zoom: -2 } },
+            { name: "대박천하마트", addr: "인천 부평구 갈산동 367번지", panoId: 1199224040, pov: { pan: 190.56, tilt: -6.41, zoom: -3 } },
             { name: "대박슈퍼", addr: "인천 부평구 경원대로", panoId: 1199058573, pov: { pan: 177.81, tilt: -2.27, zoom: 1 } },
             { name: "진평양행", addr: "강원 강릉시 임영로", panoId: 1194087150, pov: { pan: 256.26, tilt: -4.05, zoom: -1 } },
             { name: "운좋은날", addr: "서울 강동구 풍성로", panoId: 1198599079, pov: { pan: 11.15, tilt: 3.08, zoom: -1 } },
