UI: Register Nodaji Bokkwonbang POV and clean up admin list

--- a/index.html
+++ b/index.html
@@ -2457,6 +2457,7 @@
             { name: "대운", addr: "경기 김포시 대명항로", panoId: 1203824304, pov: { pan: 177.65, tilt: 9.98, zoom: 0 } },
             { name: "세계로생활가전", addr: "서울 동작구 보라매로", panoId: 1197780011, pov: { pan: 92.74, tilt: 5.30, zoom: -2 } },
             { name: "노다지복권방", addr: "인천 미추홀구 한나루로", panoId: 1199931642, pov: { pan: 128.28, tilt: 0.08, zoom: -3 } },
+            { name: "노다지복권방", addr: "경기 용인시 처인구 마평동 735-1", panoId: 1198953144, pov: { pan: 122.54, tilt: -1.88, zoom: -1 } },
             { name: "대박천하마트", addr: "인천 부평구 굴포로", panoId: 1198907645, pov: { pan: 105.07, tilt: 4.60, zoom: -2 } },
             { name: "대박천하마트", addr: "인천 부평구 갈산동 367번지", panoId: 1199224040, pov: { pan: 190.56, tilt: -6.41, zoom: -3 } },
             { name: "대박슈퍼", addr: "인천 부평구 경원대로", panoId: 1199058573, pov: { pan: 177.81, tilt: -2.27, zoom: 1 } },
