Feat: Register 6 POVs (Alibai, Nodaji, Ocheoneok, Mina, Bokkwon Jeonmunjeom, Bokkwon Myeongdang)

--- a/index.html
+++ b/index.html
@@ -2458,6 +2458,12 @@
             { name: "세계로생활가전", addr: "서울 동작구 보라매로", panoId: 1197780011, pov: { pan: 92.74, tilt: 5.30, zoom: -2 } },
             { name: "노다지복권방", addr: "인천 미추홀구 한나루로", panoId: 1199931642, pov: { pan: 128.28, tilt: 0.08, zoom: -3 } },
             { name: "노다지복권방", addr: "경기 용인시 처인구 금령로 130", panoId: 1198887321, pov: { pan: 154.07, tilt: 7.36, zoom: 1 }, customMessage: "이 매장은 2020년경 마평동 735-1에서 현 위치로 이전했습니다. 총 1등 당첨 11회 (구점포 6회 + 현점포 5회)" },
+            { name: "알리바이(나주점)", addr: "전남 나주시 나주로 142 알리바이", panoId: 1191260182, pov: { pan: 17.27, tilt: -9.34, zoom: -3 } },
+            { name: "노다지복권방", addr: "경기 시흥시 대야동 345-16 1층상가", panoId: 1175484799, pov: { pan: 246.25, tilt: 2.60, zoom: -2 } },
+            { name: "오천억복권방", addr: "광주 서구 화정동 782-14", panoId: 1200299139, pov: { pan: 357.21, tilt: 0.33, zoom: -3 } },
+            { name: "미나식품(로또판매점)", addr: "서울 강서구 방화동 484-23", panoId: 1198192808, pov: { pan: 342.76, tilt: 0.59, zoom: -3 } },
+            { name: "복권전문점", addr: "인천 부평구 청천동 236-20", panoId: 1199144048, pov: { pan: 341.21, tilt: 2.94, zoom: -3 } },
+            { name: "복권명당", addr: "충남 공주시 신관동 585-12", panoId: 1179373419, pov: { pan: 305.44, tilt: 0.77, zoom: -3 } },
             { name: "대박천하마트", addr: "인천 부평구 굴포로", panoId: 1198907645, pov: { pan: 105.07, tilt: 4.60, zoom: -2 } },
             { name: "대박천하마트", addr: "인천 부평구 갈산동 367번지", panoId: 1199224040, pov: { pan: 190.56, tilt: -6.41, zoom: -3 } },
             { name: "대박슈퍼", addr: "인천 부평구 경원대로", panoId: 1199058573, pov: { pan: 177.81, tilt: -2.27, zoom: 1 } },
