--- a/index.html
+++ b/index.html
@@ -2464,6 +2464,7 @@
             { name: "미나식품(로또판매점)", addr: "서울 강서구 방화동 484-23", panoId: 1198192808, pov: { pan: 342.76, tilt: 0.59, zoom: -3 } },
             { name: "복권전문점", addr: "인천 부평구 청천동 236-20", panoId: 1199144048, pov: { pan: 341.21, tilt: 2.94, zoom: -3 } },
             { name: "복권명당", addr: "충남 공주시 신관동 585-12", panoId: 1179373419, pov: { pan: 305.44, tilt: 0.77, zoom: -3 } },
+            { name: "영화유통(1등복권방)", addr: "울산 남구 달동 758삼성아파트상가204-101", panoId: 1202168610, pov: { pan: 245.1, tilt: 2.0, zoom: 0 } },
             { name: "대박천하마트", addr: "인천 부평구 굴포로", panoId: 1198907645, pov: { pan: 105.07, tilt: 4.60, zoom: -2 } },
             { name: "대박천하마트", addr: "인천 부평구 갈산동 367번지", panoId: 1199224040, pov: { pan: 190.56, tilt: -6.41, zoom: -3 } },
             { name: "대박슈퍼", addr: "인천 부평구 경원대로", panoId: 1199058573, pov: { pan: 177.81, tilt: -2.27, zoom: 1 } },
